# hkpilot_8UCN

./: .gitignore  Dockerfile  README.md  setup.cfg  setup.py  setup.sh.in
cmake/: GetVersion.cmake  GetVersionGit.cmake  HKPackageBuilder.cmake  PackageBuilder.cmake
data/: repos.yaml
hkpilot/: __init__.py
hkpilot/Interfaces/: __init__.py
hkpilot/Interfaces/Utilities/: buildtools.py  cmake.py  files.py
hkpilot/Interfaces/scripts/: __init__.py  hk_install.py
hkpilot/scripts/: hk_pilot.py
hkpilot/utils/: __init__.py  buildtools.py  cmake.py  fancylogger.py  files.py  gitutils.py  install.py  metapackage.py  parser.py
