###############################################################################
# Setuptools
###############################################################################

[metadata]
name = hkpilot
description = Pilot commands for HK
long_description = file: README.rst
url = https://gitlab.in2p3.fr/hk/computing/hkpilot
license = GPL-3.0-only
license_files = file: LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.8
package_dir=
    =.
packages = find:
install_requires =
    colorlog
#     gitpython
zip_safe = False
include_package_data = True

[options.package_data]

[options.packages.find]
where=src

[options.extras_require]
testing =
    mock
    pytest

[options.entry_points]
dirac =
    metadata = hkpilot:extension_metadata
# For details on adding additional scripts see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    # Interfaces
    hk-install = hkpilot.Interfaces.scripts.hk_install:main

###############################################################################
# Linting
###############################################################################

[pycodestyle]
# Pep8 codes:
# E203 - Whitespace before ':' (spaces should be present for list slices)
# E211 - Whitespace before '(' (black incorrectly formats exec when in Python 2 mode)
# E266 - Too many leading '#' for block comment
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...)
ignore = E203, E211, E266, E402, W503
# TODO: This should be reduced back to 120 at some point
max_line_length=130